k8s/profile-svc/mongo.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: profile-mongo
  labels:
    app: profile-mongo
spec:
  selector:
    matchLabels:
      app: profile-mongo
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: profile-mongo
        tier: backend
    spec:
      containers:
      - name: profile-mongo
        image: bitnami/mongodb
        ports:
        - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: profile-mongo
  labels:
    app: profile-mongo
    tier: backend
spec:
  ports:
  - port: 27017
    targetPort: 27017
  selector:
    app: profile-mongo
    tier: backend
